[package]
name = "ray-marcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.14"
bytemuck = { version = "1.12", features = ["derive"] }
instant = "0.1.12"

# Enable all features of tokio for non wasm
# TODO: Minimize features to only use required.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.24.1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wgpu = { version = "0.14", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlDivElement",
    "ResizeObserver",
] }
tokio = { version = "1.24.1", features = [
    "rt",
    "io-util",
    "time",
    "macros",
    "sync",
] }
